src/ducks/transactions/TransactionsPage.styl
@require 'settings/breakpoints'
@require '~styles/mixins.styl'

.TransactionPage__bottom
    overflow auto // TODO remove in small screen

.bnk-mov-figures
    margin          1em 0
    display         flex
    flex-direction  row
    flex-wrap       wrap

    > div
        margin 0 1em 1em 0
        flex 1

        +medium-screen()
            &
                margin 0
                flex-basis 50%

.TransactionsHeader__chart
    margin-bottom -72px

    +small-screen()
        margin-bottom -52px

.TransactionsHeader__selectDates
    position relative

